// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DisplayRsuErrors snapshot > should match snapshot 1`] = `
<div>
  <div
    style="display: flex; justify-content: center; margin: auto; width: 100%; height: 100%; background-color: rgb(0, 0, 0); border-radius: 4px;"
  >
    <div
      class="MuiStack-root css-mocked-MuiStack-root"
    >
      <div
        class="MuiStack-root css-mocked-MuiStack-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
        >
          RSU Status
        </p>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-mocked-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
      <div
        class="admin-table MuiBox-root css-1971fya"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 css-mocked-MuiPaper-root"
          style="position: relative;"
        >
          <div
            class="makeStyles-toolbarWrapper-6"
          >
            <div
              class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-mocked-MuiToolbar-root"
            >
              
              <div
                class="MuiFormControl-root MuiTextField-root css-mocked-MuiFormControl-root-MuiTextField-root"
              >
                <div
                  class="MuiInputBase-root MuiInput-root MuiInput-underline MuiInputBase-colorPrimary MuiInputBase-formControl MuiInputBase-adornedStart MuiInputBase-adornedEnd css-mocked-MuiInputBase-root-MuiInput-root"
                >
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionStart MuiInputAdornment-standard MuiInputAdornment-sizeMedium css-mocked-MuiInputAdornment-root"
                  >
                    <span
                      class="notranslate"
                    >
                      ​
                    </span>
                    <svg
                      aria-hidden="true"
                      aria-label="Search"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-mocked-MuiSvgIcon-root"
                      data-mui-internal-clone-element="true"
                      data-testid="search"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14"
                      />
                    </svg>
                  </div>
                  <input
                    aria-label="Search"
                    class="MuiInputBase-input MuiInput-input MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd css-mocked-MuiInputBase-input-MuiInput-input"
                    id="mui-80"
                    placeholder="Search"
                    type="text"
                    value=""
                  />
                  <div
                    class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-standard MuiInputAdornment-sizeMedium css-mocked-MuiInputAdornment-root"
                  >
                    <button
                      aria-label="Clear Search"
                      class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-mocked-MuiButtonBase-root-MuiIconButton-root"
                      disabled=""
                      tabindex="-1"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        aria-label="clear"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall css-mocked-MuiSvgIcon-root"
                        data-testid="clear"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="MuiBox-root css-15k1nh5"
              />
              <div
                class="MuiBox-root css-p9qzma"
              >
                <div>
                  <div
                    style="display: flex;"
                  >
                    <span>
                      <div
                        style="display: flex;"
                      >
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedInfo MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorInfo MuiButton-root MuiButton-outlined MuiButton-outlinedInfo MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorInfo css-mocked-MuiButtonBase-root-MuiButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 capital-case museo-slab css-mocked-MuiTypography-root"
                          >
                            Print Full Report
                          </p>
                        </button>
                        <button
                          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedInfo MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorInfo MuiButton-root MuiButton-outlined MuiButton-outlinedInfo MuiButton-sizeSmall MuiButton-outlinedSizeSmall MuiButton-colorInfo css-mocked-MuiButtonBase-root-MuiButton-root"
                          tabindex="0"
                          type="button"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 capital-case museo-slab css-mocked-MuiTypography-root"
                          >
                            Print Error Report
                          </p>
                        </button>
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root css-187halg"
          >
            <div>
              <div
                style="overflow-y: auto;"
              >
                <div>
                  <table
                    class="MuiTable-root css-mocked-MuiTable-root"
                    style="table-layout: auto;"
                  >
                    <thead
                      class="MuiTableHead-root css-mocked-MuiTableHead-root"
                    >
                      <tr
                        class="MuiTableRow-root MuiTableRow-head css-mocked-MuiTableRow-root"
                      >
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                          scope="col"
                          style="background-color: rgb(255, 255, 255); box-sizing: border-box; width: 30%;"
                        >
                          <div
                            aria-describedby="rfd-hidden-text-21-hidden-text-126"
                            data-rfd-drag-handle-context-id="21"
                            data-rfd-drag-handle-draggable-id="0"
                            data-rfd-draggable-context-id="21"
                            data-rfd-draggable-id="0"
                            draggable="false"
                            role="button"
                            style="position: relative; min-width: 0; display: flex;"
                            tabindex="0"
                          >
                            <span
                              aria-sort="none"
                              class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                              data-testid="mtableheader-sortlabel"
                              role="columnheader"
                              tabindex="0"
                            >
                              Location
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                data-testid="arrow_downward"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                />
                              </svg>
                            </span>
                            <span
                              data-testid="material-table-column-sort-order-indicator"
                              style="width: 1em;"
                            />
                          </div>
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                          scope="col"
                          style="background-color: rgb(255, 255, 255); box-sizing: border-box; width: calc(0.3333333333333333 * (100% - 0px - 30%));"
                        >
                          <div
                            aria-describedby="rfd-hidden-text-21-hidden-text-126"
                            data-rfd-drag-handle-context-id="21"
                            data-rfd-drag-handle-draggable-id="1"
                            data-rfd-draggable-context-id="21"
                            data-rfd-draggable-id="1"
                            draggable="false"
                            role="button"
                            style="position: relative; min-width: 0; display: flex;"
                            tabindex="0"
                          >
                            <span
                              aria-sort="none"
                              class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                              data-testid="mtableheader-sortlabel"
                              role="columnheader"
                              tabindex="0"
                            >
                              Online Status
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                data-testid="arrow_downward"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                />
                              </svg>
                            </span>
                            <span
                              data-testid="material-table-column-sort-order-indicator"
                              style="width: 1em;"
                            />
                          </div>
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                          scope="col"
                          style="background-color: rgb(255, 255, 255); box-sizing: border-box; width: calc(0.3333333333333333 * (100% - 0px - 30%));"
                        >
                          <div
                            aria-describedby="rfd-hidden-text-21-hidden-text-126"
                            data-rfd-drag-handle-context-id="21"
                            data-rfd-drag-handle-draggable-id="2"
                            data-rfd-draggable-context-id="21"
                            data-rfd-draggable-id="2"
                            draggable="false"
                            role="button"
                            style="position: relative; min-width: 0; display: flex;"
                            tabindex="0"
                          >
                            <span
                              aria-sort="none"
                              class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                              data-testid="mtableheader-sortlabel"
                              role="columnheader"
                              tabindex="0"
                            >
                              SCMS Status
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                data-testid="arrow_downward"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                />
                              </svg>
                            </span>
                            <span
                              data-testid="material-table-column-sort-order-indicator"
                              style="width: 1em;"
                            />
                          </div>
                        </th>
                        <th
                          class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                          scope="col"
                          style="background-color: rgb(255, 255, 255); box-sizing: border-box; width: calc(0.3333333333333333 * (100% - 0px - 30%));"
                        >
                          <div
                            aria-describedby="rfd-hidden-text-21-hidden-text-126"
                            data-rfd-drag-handle-context-id="21"
                            data-rfd-drag-handle-draggable-id="3"
                            data-rfd-draggable-context-id="21"
                            data-rfd-draggable-id="3"
                            draggable="false"
                            role="button"
                            style="position: relative; min-width: 0; display: flex;"
                            tabindex="0"
                          >
                            <span
                              aria-sort="none"
                              class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                              data-testid="mtableheader-sortlabel"
                              role="columnheader"
                              tabindex="0"
                            >
                              RSU IP
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                data-testid="arrow_downward"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                />
                              </svg>
                            </span>
                            <span
                              data-testid="material-table-column-sort-order-indicator"
                              style="width: 1em;"
                            />
                          </div>
                        </th>
                      </tr>
                    </thead>
                    <tbody
                      class="MuiTableBody-root css-mocked-MuiTableBody-root"
                    >
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        data-testid="mtablebodyrow"
                        index="0"
                        level="0"
                        style="overflow-wrap: break-word; border: 1px solid rgba(0, 0, 0, 0.1); background-color: inherit;"
                      >
                        <td
                          aria-label=""
                          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-mocked-MuiTableCell-root"
                          data-mui-internal-clone-element="true"
                          data-testid="mtablecell"
                          style="color: inherit; width: 0px; box-sizing: border-box; font-size: inherit; font-family: inherit; font-weight: inherit;"
                          value="1"
                        >
                          <button
                            class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textInfo MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInfo MuiButton-root MuiButton-text MuiButton-textInfo MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorInfo css-mocked-MuiButtonBase-root-MuiButton-root"
                            tabindex="0"
                            type="button"
                          >
                            <p
                              class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                            >
                              I-25
                               Mile 
                              1
                            </p>
                            <span
                              class="MuiButton-icon MuiButton-endIcon MuiButton-iconSizeMedium css-mocked-MuiButton-endIcon"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                                data-testid="GpsFixedSharpIcon"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4m8.94 3c-.46-4.17-3.77-7.48-7.94-7.94V1h-2v2.06C6.83 3.52 3.52 6.83 3.06 11H1v2h2.06c.46 4.17 3.77 7.48 7.94 7.94V23h2v-2.06c4.17-.46 7.48-3.77 7.94-7.94H23v-2zM12 19c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7"
                                />
                              </svg>
                            </span>
                          </button>
                        </td>
                        <td
                          aria-label=""
                          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-mocked-MuiTableCell-root"
                          data-mui-internal-clone-element="true"
                          data-testid="mtablecell"
                          style="color: inherit; width: calc(0.3333333333333333 * (0px - 0px - 30%)); box-sizing: border-box; font-size: inherit; font-family: inherit; font-weight: inherit;"
                          value="online"
                        >
                          <div
                            class="MuiBox-root css-0"
                            style="color: rgba(0, 0, 0, 0.87); background-color: rgb(27, 94, 32); width: 4rem; height: 1.5rem; display: flex; justify-content: center; align-items: center; border-radius: 1rem;"
                          >
                            <p
                              class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                            >
                              online
                            </p>
                          </div>
                        </td>
                        <td
                          aria-label=""
                          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-mocked-MuiTableCell-root"
                          data-mui-internal-clone-element="true"
                          data-testid="mtablecell"
                          style="color: inherit; width: calc(0.3333333333333333 * (0px - 0px - 30%)); box-sizing: border-box; font-size: inherit; font-family: inherit; font-weight: inherit;"
                          value="true"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                          >
                            Healthy
                          </p>
                          <p
                            class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                          >
                            12/31/2026, 04:59:59 PM
                          </p>
                        </td>
                        <td
                          aria-label=""
                          class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-mocked-MuiTableCell-root"
                          data-mui-internal-clone-element="true"
                          data-testid="mtablecell"
                          style="color: inherit; width: calc(0.3333333333333333 * (0px - 0px - 30%)); box-sizing: border-box; font-size: inherit; font-family: inherit; font-weight: inherit;"
                          value="10.0.0.1"
                        >
                          10.0.0.1
                        </td>
                      </tr>
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 49px;"
                      />
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 49px;"
                      />
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 49px;"
                      />
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 49px;"
                      />
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 49px;"
                      />
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 49px;"
                      />
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 49px;"
                      />
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 49px;"
                      />
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 49px;"
                      />
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 49px;"
                      />
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 49px;"
                      />
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 49px;"
                      />
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 49px;"
                      />
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 49px;"
                      />
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 49px;"
                      />
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 49px;"
                      />
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 49px;"
                      />
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 49px;"
                      />
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 49px;"
                      />
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 49px;"
                      />
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 49px;"
                      />
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 49px;"
                      />
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 49px;"
                      />
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 49px;"
                      />
                      <tr
                        class="MuiTableRow-root css-mocked-MuiTableRow-root"
                        style="height: 1px;"
                      />
                    </tbody>
                  </table>
                </div>
              </div>
            </div>
          </div>
          <table
            class="MuiTable-root css-mocked-MuiTable-root"
          >
            <tfoot
              class="MuiTableFooter-root css-mocked-MuiTableFooter-root"
              style="display: grid;"
            >
              <tr
                class="MuiTableRow-root MuiTableRow-footer css-mocked-MuiTableRow-root"
                style="display: grid;"
              >
                <td
                  class="MuiTableCell-root MuiTableCell-footer MuiTableCell-sizeMedium MuiTablePagination-root css-mocked-MuiTableCell-root-MuiTablePagination-root"
                  colspan="3"
                >
                  <div
                    class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular MuiTablePagination-toolbar css-mocked-MuiToolbar-root-MuiTablePagination-toolbar"
                  >
                    <div
                      class="MuiTablePagination-spacer css-mocked-MuiTablePagination-spacer"
                    />
                    <p
                      class="MuiTablePagination-displayedRows css-mocked-MuiTablePagination-displayedRows"
                    >
                      1–1 of 1
                    </p>
                    <div
                      class="MuiBox-root css-lm78jv"
                    >
                      <span
                        aria-label="First Page"
                        class=""
                        data-mui-internal-clone-element="true"
                      >
                        <button
                          aria-label="First Page"
                          class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-mocked-MuiButtonBase-root-MuiIconButton-root"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                            data-testid="first_page"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M18.41 16.59 13.82 12l4.59-4.59L17 6l-6 6 6 6zM6 6h2v12H6z"
                            />
                          </svg>
                        </button>
                      </span>
                      <span
                        aria-label="Previous Page"
                        class=""
                        data-mui-internal-clone-element="true"
                      >
                        <button
                          aria-label="Previous Page"
                          class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-mocked-MuiButtonBase-root-MuiIconButton-root"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                            data-testid="chevron_left"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M15.41 7.41 14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                            />
                          </svg>
                        </button>
                      </span>
                      <span
                        class="MuiTypography-root MuiTypography-caption css-mocked-MuiTypography-root"
                        style="flex-grow: 1; flex-shrink: 1; text-align: center; align-self: center; flex-basis: inherit;"
                      >
                        1-1 of 1
                      </span>
                      <span
                        aria-label="Next Page"
                        class=""
                        data-mui-internal-clone-element="true"
                      >
                        <button
                          aria-label="Next Page"
                          class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeMedium css-mocked-MuiButtonBase-root-MuiIconButton-root"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                            data-testid="chevron_right"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                            />
                          </svg>
                        </button>
                      </span>
                      <span
                        aria-label="Last Page"
                        class=""
                        data-mui-internal-clone-element="true"
                      >
                        <button
                          aria-label="Last Page"
                          class="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-sizeLarge css-mocked-MuiButtonBase-root-MuiIconButton-root"
                          disabled=""
                          tabindex="-1"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                            data-testid="last_page"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M5.59 7.41 10.18 12l-4.59 4.59L7 18l6-6-6-6zM16 6h2v12h-2z"
                            />
                          </svg>
                        </button>
                      </span>
                    </div>
                  </div>
                </td>
              </tr>
            </tfoot>
          </table>
        </div>
      </div>
    </div>
    <div
      style="display: none;"
    >
      <div
        style="margin: 50px; font-family: "Arial Helvetica Sans-Serif"; height: 100vh;"
      >
        <h1
          style="text-align: center; margin-bottom: 10px; color: black;"
        >
          RSU Summary
        </h1>
        <br />
        <p
          style="color: black;"
        >
          Below is the generated RSU summary report for all RSUs at 
          2026-04-20T00:00:00.000Z
           UTC:
        </p>
        <div
          style="margin-top: 25px;"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 css-mocked-MuiPaper-root"
            style="position: relative; background-color: white; color: black; font-family: "Arial Helvetica Sans-Serif"; border: medium;"
          >
            <div
              class="MuiBox-root css-187halg"
            >
              <div>
                <div
                  style="overflow-y: auto;"
                >
                  <div>
                    <table
                      class="MuiTable-root css-mocked-MuiTable-root"
                      style="table-layout: auto;"
                    >
                      <thead
                        class="MuiTableHead-root css-mocked-MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head css-mocked-MuiTableRow-root"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="box-sizing: border-box; width: calc(0.25 * (100% - 0px));"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-22-hidden-text-132"
                              data-rfd-drag-handle-context-id="22"
                              data-rfd-drag-handle-draggable-id="0"
                              data-rfd-draggable-context-id="22"
                              data-rfd-draggable-id="0"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                RSU
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="box-sizing: border-box; width: calc(0.25 * (100% - 0px));"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-22-hidden-text-132"
                              data-rfd-drag-handle-context-id="22"
                              data-rfd-drag-handle-draggable-id="1"
                              data-rfd-draggable-context-id="22"
                              data-rfd-draggable-id="1"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                Road
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="box-sizing: border-box; width: calc(0.25 * (100% - 0px));"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-22-hidden-text-132"
                              data-rfd-drag-handle-context-id="22"
                              data-rfd-drag-handle-draggable-id="2"
                              data-rfd-draggable-context-id="22"
                              data-rfd-draggable-id="2"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                Online Status
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="box-sizing: border-box; width: calc(0.25 * (100% - 0px));"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-22-hidden-text-132"
                              data-rfd-drag-handle-context-id="22"
                              data-rfd-drag-handle-draggable-id="3"
                              data-rfd-draggable-context-id="22"
                              data-rfd-draggable-id="3"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                SCMS Status
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root css-mocked-MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root css-mocked-MuiTableRow-root"
                          data-testid="mtablebodyrow"
                          index="0"
                          level="0"
                          style="overflow-wrap: break-word; border: 1px solid black;"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-mocked-MuiTableCell-root"
                            data-testid="mtablecell"
                            style="color: inherit; width: calc(0px); box-sizing: border-box; font-size: inherit; font-family: inherit; font-weight: inherit; border-right: 1px solid black;"
                            value="10.0.0.1"
                          >
                            <p
                              style="color: black; font-weight: bold;"
                            >
                              10.0.0.1
                            </p>
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-mocked-MuiTableCell-root"
                            data-testid="mtablecell"
                            style="color: inherit; width: calc(0px); box-sizing: border-box; font-size: inherit; font-family: inherit; font-weight: inherit; border-right: 1px solid black;"
                            value="I-25"
                          >
                            <p
                              style="color: black; font-weight: bold;"
                            >
                              I-25
                            </p>
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-mocked-MuiTableCell-root"
                            data-testid="mtablecell"
                            style="color: inherit; width: calc(0px); box-sizing: border-box; font-size: inherit; font-family: inherit; font-weight: inherit; border-right: 1px solid black;"
                            value="online"
                          >
                            <p
                              class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                            >
                              online
                            </p>
                          </td>
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium css-mocked-MuiTableCell-root"
                            data-testid="mtablecell"
                            style="color: inherit; width: calc(0px); box-sizing: border-box; font-size: inherit; font-family: inherit; font-weight: inherit; border-right: 1px solid black;"
                            value="true"
                          >
                            <p
                              class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                            >
                              Healthy
                            </p>
                            <p
                              class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                            >
                              12/31/2026, 04:59:59 PM
                            </p>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="margin: 50px; font-family: "Arial Helvetica Sans-Serif"; height: 100vh;"
      >
        <h1
          style="text-align: center; margin-bottom: 10px; color: black;"
        >
          RSU Error Summary
        </h1>
        <br />
        <p
          style="color: black;"
        >
          Below is the generated RSU Error summary report for all RSUs at 
          2026-04-20T00:00:00.000Z
           UTC:
        </p>
        <div
          style="margin-top: 25px;"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 css-mocked-MuiPaper-root"
            style="position: relative; background-color: white; color: black; font-family: "Arial Helvetica Sans-Serif"; border: medium;"
          >
            <div
              class="MuiBox-root css-187halg"
            >
              <div>
                <div
                  style="overflow-y: auto;"
                >
                  <div>
                    <table
                      class="MuiTable-root css-mocked-MuiTable-root"
                      style="table-layout: auto;"
                    >
                      <thead
                        class="MuiTableHead-root css-mocked-MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head css-mocked-MuiTableRow-root"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="box-sizing: border-box; width: calc(0.25 * (100% - 0px));"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-23-hidden-text-138"
                              data-rfd-drag-handle-context-id="23"
                              data-rfd-drag-handle-draggable-id="0"
                              data-rfd-draggable-context-id="23"
                              data-rfd-draggable-id="0"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                RSU
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="box-sizing: border-box; width: calc(0.25 * (100% - 0px));"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-23-hidden-text-138"
                              data-rfd-drag-handle-context-id="23"
                              data-rfd-drag-handle-draggable-id="1"
                              data-rfd-draggable-context-id="23"
                              data-rfd-draggable-id="1"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                Road
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="box-sizing: border-box; width: calc(0.25 * (100% - 0px));"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-23-hidden-text-138"
                              data-rfd-drag-handle-context-id="23"
                              data-rfd-drag-handle-draggable-id="2"
                              data-rfd-draggable-context-id="23"
                              data-rfd-draggable-id="2"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                Online Status
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="box-sizing: border-box; width: calc(0.25 * (100% - 0px));"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-23-hidden-text-138"
                              data-rfd-drag-handle-context-id="23"
                              data-rfd-drag-handle-draggable-id="3"
                              data-rfd-draggable-context-id="23"
                              data-rfd-draggable-id="3"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                SCMS Status
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root css-mocked-MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root css-mocked-MuiTableRow-root"
                          style="height: 49px;"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-mocked-MuiTableCell-root"
                            colspan="4"
                            style="padding-top: 0px; padding-bottom: 0px; text-align: center;"
                          >
                            No records to display
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should take a snapshot 1`] = `
<div>
  <div
    style="display: flex; justify-content: center; margin: auto; width: 100%; height: 100%; background-color: rgb(0, 0, 0); border-radius: 4px;"
  >
    <div
      class="MuiStack-root css-mocked-MuiStack-root"
    >
      <div
        class="MuiStack-root css-mocked-MuiStack-root"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
        >
          1.1.1.1 Status
        </p>
        <button
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-mocked-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
      <div
        class="accordion"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-mocked-MuiPaper-root-MuiAccordion-root"
          style="--Paper-shadow: none;"
        >
          <h3
            class="MuiAccordion-heading css-mocked-MuiAccordion-heading"
          >
            <button
              aria-expanded="false"
              class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-mocked-MuiButtonBase-root-MuiAccordionSummary-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-mocked-MuiAccordionSummary-content"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                >
                  Online Status
                </p>
              </span>
              <span
                class="MuiAccordionSummary-expandIconWrapper css-mocked-MuiAccordionSummary-expandIconWrapper"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                  data-testid="ExpandMoreIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
            </button>
          </h3>
          <div
            class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-mocked-MuiCollapse-root"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-mocked-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-mocked-MuiCollapse-wrapperInner"
              >
                <div
                  class="MuiAccordion-region"
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root css-mocked-MuiAccordionDetails-root"
                  >
                    <div>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                      >
                        <b>
                          RSU Online Status: 
                        </b>
                        Offline
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                      >
                        <b>
                          RSU Last Online: 
                        </b>
                        No Data
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-mocked-MuiPaper-root-MuiAccordion-root"
          style="--Paper-shadow: none;"
        >
          <h3
            class="MuiAccordion-heading css-mocked-MuiAccordion-heading"
          >
            <button
              aria-expanded="false"
              class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters css-mocked-MuiButtonBase-root-MuiAccordionSummary-root"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-mocked-MuiAccordionSummary-content"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                >
                  SCMS Status
                </p>
              </span>
              <span
                class="MuiAccordionSummary-expandIconWrapper css-mocked-MuiAccordionSummary-expandIconWrapper"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-mocked-MuiSvgIcon-root"
                  data-testid="ExpandMoreIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                  />
                </svg>
              </span>
            </button>
          </h3>
          <div
            class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-mocked-MuiCollapse-root"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-mocked-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-mocked-MuiCollapse-wrapperInner"
              >
                <div
                  class="MuiAccordion-region"
                  role="region"
                >
                  <div
                    class="MuiAccordionDetails-root css-mocked-MuiAccordionDetails-root"
                  >
                    <div>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                      >
                        <b>
                          SCMS Status: 
                        </b>
                        Unhealthy
                      </p>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-mocked-MuiTypography-root"
                      >
                        <b>
                          SCMS Expiration: 
                        </b>
                        Never downloaded certificates
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="display: flex; align-content: center; justify-content: flex-start; flex-direction: row;"
      >
        <button
          class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary museo-slab css-mocked-MuiButtonBase-root-MuiButton-root"
          style="margin: 1rem;"
          tabindex="0"
          type="button"
        >
          Send Error Summary Email
        </button>
      </div>
    </div>
    <div
      style="display: none;"
    >
      <div
        style="margin: 50px; font-family: "Arial Helvetica Sans-Serif"; height: 100vh;"
      >
        <h1
          style="text-align: center; margin-bottom: 10px; color: black;"
        >
          RSU Summary
        </h1>
        <br />
        <p
          style="color: black;"
        >
          Below is the generated RSU summary report for all RSUs at 
          2024-10-01T00:00:00.000Z
           UTC:
        </p>
        <div
          style="margin-top: 25px;"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 css-mocked-MuiPaper-root"
            style="position: relative; background-color: white; color: black; font-family: "Arial Helvetica Sans-Serif"; border: medium;"
          >
            <div
              class="MuiBox-root css-187halg"
            >
              <div>
                <div
                  style="overflow-y: auto;"
                >
                  <div>
                    <table
                      class="MuiTable-root css-mocked-MuiTable-root"
                      style="table-layout: auto;"
                    >
                      <thead
                        class="MuiTableHead-root css-mocked-MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head css-mocked-MuiTableRow-root"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="box-sizing: border-box; width: calc(0.25 * (100% - 0px));"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-0-hidden-text-0"
                              data-rfd-drag-handle-context-id="0"
                              data-rfd-drag-handle-draggable-id="0"
                              data-rfd-draggable-context-id="0"
                              data-rfd-draggable-id="0"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                RSU
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="box-sizing: border-box; width: calc(0.25 * (100% - 0px));"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-0-hidden-text-0"
                              data-rfd-drag-handle-context-id="0"
                              data-rfd-drag-handle-draggable-id="1"
                              data-rfd-draggable-context-id="0"
                              data-rfd-draggable-id="1"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                Road
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="box-sizing: border-box; width: calc(0.25 * (100% - 0px));"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-0-hidden-text-0"
                              data-rfd-drag-handle-context-id="0"
                              data-rfd-drag-handle-draggable-id="2"
                              data-rfd-draggable-context-id="0"
                              data-rfd-draggable-id="2"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                Online Status
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="box-sizing: border-box; width: calc(0.25 * (100% - 0px));"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-0-hidden-text-0"
                              data-rfd-drag-handle-context-id="0"
                              data-rfd-drag-handle-draggable-id="3"
                              data-rfd-draggable-context-id="0"
                              data-rfd-draggable-id="3"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                SCMS Status
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root css-mocked-MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root css-mocked-MuiTableRow-root"
                          style="height: 49px;"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-mocked-MuiTableCell-root"
                            colspan="4"
                            style="padding-top: 0px; padding-bottom: 0px; text-align: center;"
                          >
                            No records to display
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        style="margin: 50px; font-family: "Arial Helvetica Sans-Serif"; height: 100vh;"
      >
        <h1
          style="text-align: center; margin-bottom: 10px; color: black;"
        >
          RSU Error Summary
        </h1>
        <br />
        <p
          style="color: black;"
        >
          Below is the generated RSU Error summary report for all RSUs at 
          2024-10-01T00:00:00.000Z
           UTC:
        </p>
        <div
          style="margin-top: 25px;"
        >
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 css-mocked-MuiPaper-root"
            style="position: relative; background-color: white; color: black; font-family: "Arial Helvetica Sans-Serif"; border: medium;"
          >
            <div
              class="MuiBox-root css-187halg"
            >
              <div>
                <div
                  style="overflow-y: auto;"
                >
                  <div>
                    <table
                      class="MuiTable-root css-mocked-MuiTable-root"
                      style="table-layout: auto;"
                    >
                      <thead
                        class="MuiTableHead-root css-mocked-MuiTableHead-root"
                      >
                        <tr
                          class="MuiTableRow-root MuiTableRow-head css-mocked-MuiTableRow-root"
                        >
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="box-sizing: border-box; width: calc(0.25 * (100% - 0px));"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-1-hidden-text-6"
                              data-rfd-drag-handle-context-id="1"
                              data-rfd-drag-handle-draggable-id="0"
                              data-rfd-draggable-context-id="1"
                              data-rfd-draggable-id="0"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                RSU
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="box-sizing: border-box; width: calc(0.25 * (100% - 0px));"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-1-hidden-text-6"
                              data-rfd-drag-handle-context-id="1"
                              data-rfd-drag-handle-draggable-id="1"
                              data-rfd-draggable-context-id="1"
                              data-rfd-draggable-id="1"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                Road
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="box-sizing: border-box; width: calc(0.25 * (100% - 0px));"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-1-hidden-text-6"
                              data-rfd-drag-handle-context-id="1"
                              data-rfd-drag-handle-draggable-id="2"
                              data-rfd-draggable-context-id="1"
                              data-rfd-draggable-id="2"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                Online Status
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                          <th
                            class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeSmall css-mocked-MuiTableCell-root"
                            scope="col"
                            style="box-sizing: border-box; width: calc(0.25 * (100% - 0px));"
                          >
                            <div
                              aria-describedby="rfd-hidden-text-1-hidden-text-6"
                              data-rfd-drag-handle-context-id="1"
                              data-rfd-drag-handle-draggable-id="3"
                              data-rfd-draggable-context-id="1"
                              data-rfd-draggable-id="3"
                              draggable="false"
                              role="button"
                              style="position: relative; min-width: 0; display: flex;"
                              tabindex="0"
                            >
                              <span
                                aria-sort="none"
                                class="MuiButtonBase-root MuiTableSortLabel-root css-mocked-MuiButtonBase-root-MuiTableSortLabel-root"
                                data-testid="mtableheader-sortlabel"
                                role="columnheader"
                                tabindex="0"
                              >
                                SCMS Status
                                <svg
                                  aria-hidden="true"
                                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiTableSortLabel-icon MuiTableSortLabel-iconDirectionAsc css-mocked-MuiSvgIcon-root-MuiTableSortLabel-icon"
                                  data-testid="arrow_downward"
                                  focusable="false"
                                  viewBox="0 0 24 24"
                                >
                                  <path
                                    d="m20 12-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8z"
                                  />
                                </svg>
                              </span>
                              <span
                                data-testid="material-table-column-sort-order-indicator"
                                style="width: 1em;"
                              />
                            </div>
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="MuiTableBody-root css-mocked-MuiTableBody-root"
                      >
                        <tr
                          class="MuiTableRow-root css-mocked-MuiTableRow-root"
                          style="height: 49px;"
                        >
                          <td
                            class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium css-mocked-MuiTableCell-root"
                            colspan="4"
                            style="padding-top: 0px; padding-bottom: 0px; text-align: center;"
                          >
                            No records to display
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
